--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
      <li><a class="m-item" href="about.html ">About</a></li>
      <li><a class="m-item" href="contact.html ">Contact</a></li>
    </ul>
-   <a href="linkedin.com/in/theο-james-xylos-b7202160"><i class="fab fa-linkedin"></i></a>
+   <a href="https://www.linkedin.com/in/theodosis-james-xylos-b7202160"><i class="fab fa-linkedin"></i></a>
   </div>
 
 <div class="container top-container">
