--- a/about.html
+++ b/about.html
@@ -32,10 +32,9 @@
         <img class="profile-pic" src="images/profile_pic.png" alt="Gradient Shape" />
       </div>
       <div class="col-lg-6 col-sm-12">
-        <h2 class="about-title">I'm Theo, a web developer.</h1>
+        <h2 class="about-title">I'm Theo.</h1>
           <p class="about-text">I have been for the most part of my work expreriense
-            working as a system admnistrator but occationaly taking on web develpement projects as a freelancer, but as from 2019 i disided to devote my self
-            to web developement. So here we are and as the say "The rest is code."</p>
+            working as a system admnistrator but occationaly taking on web develpement projects as a freelancer."</p>
           <p class="about-text"> These days i spend my time completing online courses about different programming languages and web develpement technologies,
             back-end and front-end, sharpening my coding skills and knowledge over web develpement.
           </p>
